<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.plans.TaskListActivity">

    <item
        android:id="@+id/action_task_search"
        android:icon="@mipmap/toolbar_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_task_condition"
        android:icon="@mipmap/product_header_screen1"
        android:title="@string/action_condition"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_task_add"
        android:icon="@mipmap/toolbar_action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
