<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.plans.DailyCallListActivity">

    <item
        android:id="@+id/action_daily_call_search"
        android:icon="@mipmap/toolbar_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_daily_call_condition"
        android:icon="@mipmap/product_header_screen1"
        android:title="@string/action_condition"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_daily_call_add"
        android:icon="@mipmap/toolbar_action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
</menu>
