<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout style="@style/editableItemGroupBox">

        <LinearLayout
            android:id="@+id/content_add_task__select_customer"
            style="@style/editableItemGroup">

            <TextView
                style="@style/editableItemLabel"
                android:text="@string/add_task_customer" />

            <TextView
                android:id="@+id/content_add_task__select_customer_value"
                style="@style/editableItemValue" />

            <ImageView style="@style/editableItemRightArrow" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_w"></View>

        <LinearLayout
            android:id="@+id/content_add_task__edit_task"
            style="@style/editableItemGroup">

            <TextView
                style="@style/editableItemLabel"
                android:text="@string/add_task_task" />

            <TextView
                android:id="@+id/content_add_task__task_value"
                android:singleLine="true"
                android:ellipsize="end"
                style="@style/editableItemValue" />

            <ImageView style="@style/editableItemRightArrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_w"></View>

        <LinearLayout
            android:id="@+id/content_add_task__start_date"
            style="@style/editableItemGroup">

            <TextView
                style="@style/editableItemLabel"
                android:text="@string/add_task_start_time" />

            <TextView
                android:id="@+id/content_add_task__start_date_value"
                style="@style/editableItemValue" />

            <ImageView style="@style/editableItemRightArrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_w"></View>

        <LinearLayout
            android:id="@+id/content_add_task__end_date"
            style="@style/editableItemGroup">

            <TextView
                style="@style/editableItemLabel"
                android:text="@string/add_task_end_time" />

            <TextView
                android:id="@+id/content_add_task__end_date_value"
                style="@style/editableItemValue" />

            <ImageView style="@style/editableItemRightArrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_w"></View>

        <LinearLayout
            android:id="@+id/content_add_task__type"
            style="@style/editableItemGroup">

            <TextView
                style="@style/editableItemLabel"
                android:text="@string/add_task_type" />

            <TextView
                android:id="@+id/content_add_task__type_value"
                style="@style/editableItemValue" />

            <ImageView style="@style/editableItemRightArrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_w"></View>

        <LinearLayout
            android:id="@+id/content_add_task__status"
            style="@style/editableItemGroup">

            <TextView
                style="@style/editableItemLabel"
                android:text="@string/add_task_status" />

            <TextView
                android:id="@+id/content_add_task__status_value"
                style="@style/editableItemValue"
                android:text="Not Start Yet"/>

            <ImageView style="@style/editableItemRightArrow" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        style="@style/editableItemGroupBox"
        android:paddingBottom="@dimen/activity_horizontal_margin">


        <LinearLayout
            android:id="@+id/content_add_task__description"
            style="@style/editableItemGroup">

            <LinearLayout style="@style/editableGroupRows">

                <TextView
                    style="@style/editableItemLabelRow"
                    android:text="@string/add_task_description" />

                <TextView
                    android:id="@+id/content_add_task__note"
                    style="@style/editableItemValueRow" />
            </LinearLayout>


            <ImageView style="@style/editableItemRightArrow" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
