<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/WhiteBG"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_popupwindows_dalu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/mainland1"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />


        <TextView
            android:id="@+id/item_popupwindows_feidalu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/no_mainland"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />


        <TextView
            android:id="@+id/item_popupwindows_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/cancel1"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>